syntax = "proto3";

package order;

option go_package = "github.com/stpnv0/protos/gen/go/order";

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
    rpc GetUserOrders(GetUserOrdersRequest) returns (GetUserOrdersResponse);
    rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);
}

message OrderItem {
    int32 sneaker_id = 1;
    int32 quantity = 2;
    int32 price_at_purchase = 3;
}

message Order {
    int32 id = 1;
    int32 user_id = 2;
    string status = 3;
    int32 total_amount = 4;
    repeated OrderItem items = 5;
    int64 created_at = 6;
    int64 updated_at = 7;
    string payment_url = 8;
}

message CreateOrderRequest {
    int32 user_id = 1;
    repeated OrderItem items = 2;
}

message CreateOrderResponse {
    Order order = 1;
}

message GetOrderRequest {
    int32 order_id = 1;
}

message GetOrderResponse {
    Order order = 1;
}

message GetUserOrdersRequest {
    int32 user_id = 1;
}

message GetUserOrdersResponse {
    repeated Order orders = 1;
}

message UpdateOrderStatusRequest {
    int32 order_id = 1;
    string status = 2;
}

message UpdateOrderStatusResponse {
    bool success = 1;
}
